[tool.poetry]
name = "carling"
version = "0.4.0"
description = "Useful transforms for supporting apache beam pipelines."
authors = [
    "Adam Moore <adam@mcdigital.jp>",
    "Tsuyoki Kumazaki <tsuyoki@mcdigital.jp>",
    "Masaaki Hirotsu <masaaki@mcdigital.jp>"
]
license = "Apache-2.0"
homepage = "https://github.com/mc-digital/carling"
repository = "https://github.com/mc-digital/carling"
readme = "README.md"
include = ["carling/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
apache-beam = "^2.49.0"
deepdiff = ">=5.7,<7.0"

[tool.poetry.dev-dependencies]
black = "^23.3"
flake8 = "^5.0.4"
isort = "^5.11.5"
pytest = "^7.4.4"
pytest-watch = "^4.2.0"
tox = "^4.15.1"

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
